ClientName now showing, though still showing all tokens
git-svn-id: https://svn.forgerock.org/openam/branches/AME-4254@10157 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-ui-ria/src/main/resources/templates/openam/oauth2/TokensTemplate.html
+++ b/openam/openam-ui-ria/src/main/resources/templates/openam/oauth2/TokensTemplate.html
@@ -12,7 +12,7 @@
 
             {{#each tokens}}
             <tr>
-                <td>{{this.clientID}}</td>
+                <td>{{this.display_name}} </td>
                 <td>{{this.expireTime}} </td>
                 <td><a class="deleteToken" href="#" id="{{this.id}}">{{t "openam.oAuth2.tokens.deleteToken"}}</a></td>
             </tr>
