--- a/openam/openam-ui-ria/src/main/resources/templates/openam/oauth2/TokensTemplate.html
+++ b/openam/openam-ui-ria/src/main/resources/templates/openam/oauth2/TokensTemplate.html
@@ -6,6 +6,7 @@
 
             <tr>
                 <th scope="col">{{t "openam.oAuth2.tokens.appName"}}</th>
+                <th scope="col">{{t "openam.oAuth2.tokens.scope"}}</th>
                 <th scope="col">{{t "openam.oAuth2.tokens.expiryDate"}}</th>
                 <th scope="col"></th>
             </tr>
@@ -13,6 +14,7 @@
             {{#each tokens}}
             <tr>
                 <td>{{this.display_name}} </td>
+                <td>{{this.scopes}} </td>
                 <td>{{this.expireTime}} </td>
                 <td><a class="deleteToken" href="#" id="{{this.id}}">{{t "openam.oAuth2.tokens.deleteToken"}}</a></td>
             </tr>
