AME-4298, CR-4390 - Merge changes from trunk and update com.iplanet.dpro.session.Session in accordance with code review comments
Updates to Session: Add comment to run method and update AtomicBoolean logic in removeSID.

git-svn-id: https://svn.forgerock.org/openam/branches/AME-3423@10390 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-ui-policy/src/main/resources/css/policy/common.less
+++ b/openam/openam-ui-policy/src/main/resources/css/policy/common.less
@@ -172,6 +172,7 @@
         border-radius: 3px;
         border:1px solid #bebebe;
         cursor:pointer;
+        overflow-x:auto;
 
         h2 {
             float: left;
@@ -198,19 +199,9 @@
             float: left;
         }
 
-        .icon-pencil{
-            float:right;
-            opacity:0;
-            padding:8px 0 0 0;
-            transition:opacity 200ms linear;
-        }
-
         &:hover, &:focus{
-            background: @active-background-color;
+            background: #bebebe;
             box-shadow:none;
-            .icon-pencil{
-                opacity:0.5;
-            }
         }
 
     }
@@ -247,19 +238,28 @@
         white-space: nowrap;
         overflow: hidden;
     }
-    #manageApps td[aria-describedby="manageApps_name"] {
-        text-align: center;
-        .icon-search{
-            text-decoration: none;
-            font-size: 16px;
-            vertical-align: middle;
-            color: #80b7ab;
+
+    #manageApps {
+        cursor: pointer;
+
+        td[aria-describedby="manageApps_name"] {
+            text-align: center;
+            .icon-search {
+                text-decoration: none;
+                font-size: 16px;
+                vertical-align: middle;
+                color: #80b7ab;
+            }
         }
     }
+
+    #manageApps_frozen {
+        cursor: pointer;
+    }
+
     .ui-state-hover a{
         color: #fff !important;
     }
-
 }
 
 .frozen-bdiv.ui-jqgrid-bdiv {
